overflow fix in results

--- a/static/css/results.css
+++ b/static/css/results.css
@@ -8,6 +8,7 @@
     width: 100vw;
     box-sizing: border-box;
     padding: 2vh;
+    overflow-y: auto;
 }
 
 body.mobile #jsonDropdown {
